2008-11-11  Levi Bard <taktaktaktaktaktaktaktaktaktak@gmail.com>

	* Mono.TextEditor.Vi/ViMode.cs: Implement y.

2008-11-10  Levi Bard <taktaktaktaktaktaktaktaktaktak@gmail.com>

	* Mono.TextEditor.Vi/ViActionMaps.cs: Allow Page(Up|Down).

2008-11-10  Levi Bard <taktaktaktaktaktaktaktaktaktak@gmail.com>

	* Mono.TextEditor.Vi/ViMode.cs: Allow backspace for search/ex.

2008-11-10  Mike Krüger  <mike@icsharpcode.net>

	* Mono.TextEditor/ClipboardActions.cs: fixed possible null reference
	exception.

2008-11-07  Levi Bard <taktaktaktaktaktaktaktaktaktak@gmail.com>

	* Mono.TextEditor.Vi/ViMode.cs: Implement p P.

2008-11-07  Michael Hutchinson  <mhutchinson@novell.com>

	* Mono.TextEditor/TextEditor.cs: Add helper for generating menu for
	selecting input method.

2008-11-06  Michael Hutchinson  <mhutchinson@novell.com>

	* Makefile.am: Fix build dependencies.

2008-11-06  Mike Krüger  <mike@icsharpcode.net>

	* Mono.TextEditor.Highlighting/SyntaxMode.cs: Fixed 'Bug 442110 - Syntax
	highlighting parser problem with escaped backslash'.

2008-11-05  Michael Hutchinson  <mhutchinson@novell.com>

	* Mono.TextEditor.Vi/ViMode.cs: Made the "I" command open insert mode
	before the first non-whitespace character on the line, not the line
	start. Fixes "Bug 438177 - [vi] 'I' behavior inconsistent with vi".

2008-11-05  Mike Krüger  <mike@icsharpcode.net>

	* Mono.TextEditor/Margin.cs:
	* Mono.TextEditor/IBuffer.cs:
	* Mono.TextEditor/Segment.cs:
	* Mono.TextEditor/Document.cs:
	* Mono.TextEditor/EditMode.cs:
	* Mono.TextEditor/GapBuffer.cs:
	* Mono.TextEditor.Vi/ViMode.cs:
	* Mono.TextEditor/TextEditor.cs:
	* Mono.TextEditor/IconMargin.cs:
	* Mono.TextEditor/FoldSegment.cs:
	* Mono.TextEditor/SearchResult.cs:
	* Mono.TextEditor/RedBlackTree.cs:
	* Mono.TextEditor/LineSplitter.cs:
	* Mono.TextEditor/GutterMargin.cs:
	* Mono.TextEditor/HelperMethods.cs:
	* Mono.TextEditor/TextViewMargin.cs:
	* Mono.TextEditor/TextEditorData.cs:
	* Mono.TextEditor/BookmarkActions.cs: